--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,91 @@ a {
     color-scheme: dark;
   }
 }
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#page {
+  width: 90%;
+  max-width: 60rem;
+  margin: 2rem auto;
+}
+
+#main-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+#home {
+  margin: 3rem auto;
+  max-width: 50rem;
+  text-align: center;
+}
+
+#home img {
+  /* width: 8rem;
+  border-radius: 50%; */
+  box-shadow: 0 0 10px 0 #181817;
+}
+
+#home h1 {
+  margin-top: 3rem;
+  font-size: 2.5rem;
+}
+
+#home p {
+  margin: 2rem 0;
+  color: #bcbcb7;
+  font-size: 1.1rem;
+}
+
+#home a {
+  display: inline-block;
+  padding: 1rem 2rem;
+  background-color: #bcbcb7;
+  color: #181817;
+  border-radius: 4px;
+  text-decoration: none;
+  font-weight: bold;
+  margin-top: 2rem;
+}
+
+#home a:hover {
+  background-color: #e5e5e1;
+}
+
+#logo {
+  font-family: 'Inter', sans-serif;
+  font-size: 1.5rem;
+  border-radius: 4px;
+}
+
+#main-header #logo a,
+#main-header #logo a:hover {
+  color: #e1e1d7;
+  text-decoration: none;
+}
+
+#main-header ul {
+  display: flex;
+  gap: 2rem;
+  font-weight: bold;
+}
+
+#main-header ul a {
+  text-decoration: none;
+  color: #e5e5e1;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+}
+
+#main-header ul a:hover,
+#main-header ul a.active {
+  background-color: #bcbcb7;
+  color: #181817;
+}
